# HouseholdManager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev-start.sh  docker-compose.yml  make.bat  manage.py  pyproject.toml  requirements.txt
apps/analytics/: api.py
apps/budgets/: api.py  apps.py
apps/categories/: admin.py  api.py  apps.py  models.py  schemas.py
apps/categories/migrations/: 0001_initial.py  0002_initial.py
apps/expenses/: api.py  apps.py
apps/families/: admin.py  api.py  apps.py  models.py  schemas.py
apps/families/migrations/: 0001_initial.py  0002_initial.py
apps/ml_categorizer/: __init__.py  apps.py
apps/receipts/: __init__.py  api.py  apps.py
apps/telegram_bot/: __init__.py  api.py  apps.py
apps/users/: admin.py  api.py  apps.py  models.py  schemas.py
apps/users/migrations/: 0001_initial.py
household_manager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
monitoring/: prometheus.yml
